--- a/sof308-js/package.json
+++ b/sof308-js/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "json-server": "^1.0.0-beta.3",
     "vue": "^3.5.12",
     "vue-router": "^4.5.0"
   },
